.provarCaches/00Df2000001KKNJEA4/objects/IncapMessaging__Channel__mdt.object
<CustomObject>
    <fields>
        <fullName>IncapMessaging__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Description__c</fullName>
        <label>Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Label__c</fullName>
        <label>Label</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IncapMessaging__Privacy__c</fullName>
        <label>Privacy</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Terms_and_Conditions__c</fullName>
        <label>Terms and Conditions</label>
        <type>Url</type>
    </fields>
    <label>Channel</label>
    <pluralLabel>Channels</pluralLabel>
</CustomObject>